@startuml
hide circle
skinparam linetype ortho
skinparam shadowing false

package "Acceso y configuracion" {
  entity "users" as users {
    * id : bigint
    --
    name : string
    email : string
    dni : string
    telefono : string
    status : string
    precio_consulta : decimal
    moneda : string
    theme_preference : string
  }

  entity "roles" as roles {
    * id : bigint
    --
    name : string
    description : string
  }

  entity "role_user" as role_user {
    * user_id : fk
    * role_id : fk
  }

  entity "face_profiles" as face_profiles {
    * id : bigint
    --
    user_id : fk
    descriptor : json
    threshold : float
    failed_attempts : tinyint
    last_verified_at : timestamp
  }

  entity "patient_flags" as patient_flags {
    * id : bigint
    --
    user_id : fk
    adulto_mayor : bool
    embarazo : bool
    discapacidad : bool
    cronico : bool
  }

  entity "feature_access_requests" as feature_access_requests {
    * id : bigint
    --
    user_id : fk
    feature : string
    status : string
    approved_until : timestamp
    reviewed_by : fk
    revoked_by : fk
  }

  entity "site_settings" as site_settings {
    * id : bigint
    --
    key : string
    section : string
    type : string
    value : longtext
  }
}

package "Agenda y atencion" {
  entity "especialidades" as especialidades {
    * id : bigint
    --
    nombre : string
    descripcion : text
    activo : bool
    orden : int
  }

  entity "doctor_especialidad" as doctor_especialidad {
    * id : bigint
    --
    user_id : fk
    especialidad_id : fk
  }

  entity "horarios" as horarios {
    * id : bigint
    --
    doctor_id : fk
    fecha : date
    hora_inicio : time
    hora_fin : time
    intervalo_minutos : smallint
  }

  entity "citas_medicas" as citas_medicas {
    * id : bigint
    --
    paciente_id : fk
    doctor_id : fk
    especialidad_id : fk
    fecha : date
    hora : time
    motivo_consulta : string
    estado : string
    activo : bool
    prioridad_nivel : string
  }

  entity "cita_eventos" as cita_eventos {
    * id : bigint
    --
    cita_id : fk
    user_id : fk
    tipo : string
    de_estado : string
    a_estado : string
    comentario : string
  }

  entity "notas_soap" as notas_soap {
    * id : bigint
    --
    cita_id : fk
    estado : string
    signed_at : timestamp
    signed_by : fk
    signos_vitales : json
    assessment : text
    plan_general : text
  }

  entity "nota_soap_diagnosticos" as nota_soap_diagnosticos {
    * id : bigint
    --
    nota_soap_id : fk
    tipo : string
    texto : string
    cie10 : string
  }

  entity "nota_soap_enmiendas" as nota_soap_enmiendas {
    * id : bigint
    --
    nota_soap_id : fk
    user_id : fk
    motivo : text
    contenido : text
  }

  entity "recetas" as recetas {
    * id : bigint
    --
    cita_id : fk
    diagnostico : text
    medicamentos : text
    indicaciones : text
    pdf_path : string
    enviado_en : timestamp
  }

  entity "facturas" as facturas {
    * id : bigint
    --
    cita_id : fk
    paciente_id : fk
    doctor_id : fk
    subtotal : decimal
    impuestos : decimal
    total : decimal
    estado : string
  }

  entity "factura_items" as factura_items {
    * id : bigint
    --
    factura_id : fk
    descripcion : string
    cantidad : int
    precio_unitario : decimal
    total_linea : decimal
  }
}

package "Pagos" {
  entity "pagos" as pagos {
    * id : bigint
    --
    cita_id : fk
    paciente_id : fk
    folio_unico : string
    token_publico : string
    monto : decimal
    metodo_pago : string
    estado : string
    comprobante_path : string
    aprobado_por : fk
    aprobado_en : timestamp
  }

  entity "payment_status_logs" as payment_status_logs {
    * id : bigint
    --
    pago_id : fk
    estado_anterior : string
    estado_nuevo : string
    actor_id : fk
    actor_rol : string
    motivo : text
  }

  entity "payment_receipts" as payment_receipts {
    * id : bigint
    --
    pago_id : fk
    folio_recibo : string
    emitido_en : timestamp
    emitido_por : fk
    metodo_pago : string
    monto : decimal
    pdf_path : string
  }

  entity "payment_receipt_logs" as payment_receipt_logs {
    * id : bigint
    --
    payment_receipt_id : fk
    estado_nuevo : string
    actor_id : fk
    actor_rol : string
    motivo : text
  }

  entity "booking_override_logs" as booking_override_logs {
    * id : bigint
    --
    paciente_id : fk
    actor_id : fk
    cita_id : fk
    motivo : text
  }
}

package "Laboratorio" {
  entity "laboratorio_ordenes" as laboratorio_ordenes {
    * id : bigint
    --
    cita_id : fk
    solicitante_id : fk
    origen : string
    prioridad : string
    tipo_examen : string
    estado : string
    resultado_path : string
  }

  entity "lab_tests" as lab_tests {
    * id : bigint
    --
    nombre : string
    tipo : string
    categoria : string
    requiere_orden : bool
    es_rutina : bool
    activo : bool
  }

  entity "medical_orders" as medical_orders {
    * id : bigint
    --
    patient_id : fk
    doctor_id : fk
    lab_test_id : fk
    status : string
    doctor_notes : text
  }

  entity "lab_orders" as lab_orders {
    * id : bigint
    --
    patient_id : fk
    doctor_id : fk
    medical_order_id : fk
    source : string
    priority : string
    status : string
    scheduled_at : timestamp
  }

  entity "lab_order_items" as lab_order_items {
    * id : bigint
    --
    lab_order_id : fk
    lab_test_id : fk
    preparacion_snapshot : text
    indicaciones_snapshot : text
    resultado_url : string
  }
}

package "Canales y soporte" {
  entity "whatsapp_messages" as whatsapp_messages {
    * id : bigint
    --
    cita_id : fk
    user_id : fk
    rol_receptor : string
    evento : string
    telefono : string
    estado : string
    provider : string
  }

  entity "captcha_images" as captcha_images {
    * id : bigint
    --
    class_key : string
    dataset_split : string
    image_path : string
  }

  entity "captcha_challenges" as captcha_challenges {
    * id : bigint
    --
    target_key : string
    option_image_ids : json
    attempts : tinyint
    max_attempts : tinyint
    expires_at : timestamp
    verified_at : timestamp
  }

  entity "contactos" as contactos {
    * id : bigint
    --
    nombre : string
    email : string
    telefono : string
    asunto : string
    mensaje : text
  }
}

users ||--o{ role_user
roles ||--o{ role_user
users ||--o{ doctor_especialidad
especialidades ||--o{ doctor_especialidad

users ||--o| face_profiles
users ||--o| patient_flags
users ||--o{ feature_access_requests : requested_by
users ||--o{ feature_access_requests : reviewed_by
users ||--o{ feature_access_requests : revoked_by

users ||--o{ horarios : doctor_id
users ||--o{ citas_medicas : paciente_id
users ||--o{ citas_medicas : doctor_id
especialidades ||--o{ citas_medicas
citas_medicas ||--o{ cita_eventos

citas_medicas ||--o| notas_soap
users ||--o{ notas_soap : signed_by
notas_soap ||--o{ nota_soap_diagnosticos
notas_soap ||--o{ nota_soap_enmiendas
users ||--o{ nota_soap_enmiendas
citas_medicas ||--o| recetas
citas_medicas ||--o| facturas
facturas ||--o{ factura_items

citas_medicas ||--o| pagos
users ||--o{ pagos : paciente_id
users ||--o{ pagos : aprobado_por
payment_status_logs }o--|| pagos
users ||--o{ payment_status_logs : actor_id
payment_receipts ||--|| pagos
users ||--o{ payment_receipts : emitido_por
payment_receipts ||--o{ payment_receipt_logs
users ||--o{ payment_receipt_logs : actor_id
users ||--o{ booking_override_logs : paciente_id
users ||--o{ booking_override_logs : actor_id
citas_medicas ||--o{ booking_override_logs

citas_medicas ||--o| laboratorio_ordenes
users ||--o{ laboratorio_ordenes : solicitante_id
lab_tests ||--o{ medical_orders
users ||--o{ medical_orders : patient_id
users ||--o{ medical_orders : doctor_id
medical_orders ||--o{ lab_orders
users ||--o{ lab_orders : patient_id
users ||--o{ lab_orders : doctor_id
lab_orders ||--o{ lab_order_items
lab_tests ||--o{ lab_order_items

citas_medicas ||--o{ whatsapp_messages
users ||--o{ whatsapp_messages
captcha_challenges ..> captcha_images : option_image_ids
@enduml
